<resources>
    <string name="app_name">TestDriveRegister</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_details">DriverDetailsActivity</string>
    <string name="driverDetailsTitle">Driver Details</string>
    <string name="driverDetailsSubtitle">Please type driver\'s details</string>
    <string name="driverNameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Phone Number</string>
    <string name="licenceHint">License Number</string>
    <string name="regoHint">Rego Number</string>
    <string name="driverDetailsButton">Next</string>
    <string name="title_activity_agreement">AgreementActivity</string>
    <string name="agreementTitle">Agreement</string>
    <string name="agreementCheckBox">I accept the terms in the Agreement</string>
    <string name="agreementButton">Next</string>
    <string name="title_activity_time_count">TimeCountActivity</string>
    <string name="stopButton">Stop</string>
    <string name="signInButton">Sign In</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="resultButton">Done</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in_succeeded">Successfully signed in</string>
    <string name="title_activity_staff_info">StaffInfoActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nextButton">NEXT</string>
    <string name="startSubtitle">Push button to start new test drive</string>
    <string name="startButton">Confirm &amp; Start</string>
    <string name="title_activity_start_drive">StartDriveActivity</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="finishButton">Finish</string>
    <string name="alertFinishDriveMessage">Finish the test drive?</string>
    <string name="submitButton">Submit</string>
    <string name="database_error">Failed to read data. Try again</string>
    <string name="carModelHint">Car Model</string>
    <string name="streetHint">Street Address</string>
    <string name="suburbHint">Suburb</string>
    <string name="postcodeHint">Postcode</string>
    <string name="submission_failed">Submission failed</string>
    <string name="resetPasswordButton">Forgot your password?</string>
    <string name="sendEmailButton">Send Email</string>
    <string name="cancelPasswordResetButton">Cancel</string>
    <string name="email_sent">Email sent.</string>
    <string name="email_failed">Failed to send email.</string>
    <string-array name="states_array">
        <item>QLD</item>
        <item>NSW</item>
        <item>VIC</item>
        <item>TAS</item>
        <item>SA</item>
        <item>WA</item>
        <item>NT</item>
        <item>ACT</item>
    </string-array>
    <string-array name="makes_array">
        <item>Audi</item>
        <item>VW</item>
        <item>Mazda</item>
        <item>Jaguar</item>
        <item>Land Rover</item>
        <item>Hyundai</item>
        <item>Chrysler</item>
        <item>Jeep</item>
        <item>Dodge</item>
        <item>Isuzu</item>
    </string-array>
</resources>
