<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.com.jamesfrizelles.testdriveregister.DriverDetailsActivity"
    tools:showIn="@layout/activity_driver_details"
    android:focusable="true" android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="15"
                    android:id="@+id/nameEditText"
                    android:hint="@string/driverNameHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/licenceEditText"
                    android:hint="@string/licenceHint"
                    android:ems="15"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="15"
                    android:id="@+id/phoneEditText"
                    android:hint="@string/phoneHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="15"
                    android:id="@+id/emailEditText"
                    android:hint="@string/emailHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Mailing Address:"
                android:id="@+id/textView6" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="15"
                    android:id="@+id/streetEditText"
                    android:hint="@string/streetHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_suburb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="15"
                    android:id="@+id/suburbEditText"
                    android:hint="@string/suburbHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stateSpinner"
                    android:layout_margin="10dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_postcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="8"
                    android:id="@+id/postcodeEditText"
                    android:layout_margin="10dp"
                    android:hint="@string/postcodeHint" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Car Make:"
                    android:layout_margin="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/carMakeSpinner"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/carModelEditText"
                    android:ems="15"
                    android:hint="@string/carModelHint"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_rego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/regoEditText"
                    android:hint="@string/regoHint"
                    android:ems="15"
                    android:layout_margin="10dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nextButton"
                android:id="@+id/button"
                android:background="@color/colorAccent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20dp"
                android:onClick="onClickNext"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="-15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/footerImage"
            android:src="@drawable/footer" />
    </RelativeLayout>

</RelativeLayout>
